# invariant

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: nix.yml
crates/invariant-engine/: Cargo.toml
crates/invariant-engine/src/: component_loader.rs  engine.rs  error.rs  lib.rs
crates/invariant-journal/: Cargo.toml
crates/invariant-journal/src/: command.rs  error.rs  lib.rs  replay.rs  resolution.rs  state.rs  status.rs
crates/invariant-journal/src/invariants/: control_flow.rs  join_set.rs  mod.rs  side_effects.rs  structural.rs
crates/invariant-types/: Cargo.toml
crates/invariant-types/src/: error.rs  event.rs  execution_error.rs  join_set.rs  journal.rs  lib.rs  payload.rs  promise_id.rs
scripts/ci/: rust-quality.sh
spec/journal/: COMPARISON_OBELISK.md  DRIFT_PARITY.md  JOURNAL_ARCH.md  execution_journal.qnt
