[workspace]
resolver = "3"
members = [
    "crates/invariant-engine",
]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
chrono = { version = "0.4.43", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"
wit-bindgen = "0.24.0"
