[package]
name = "invariant-journal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
invariant-types = { version = "0.1.0", path = "../invariant-types" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
insta = { workspace = true }
similar-asserts = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
